[gd_scene load_steps=6 format=3 uid="uid://b8fovaesjaw4s"]

[ext_resource type="Script" path="res://resources/inventory/ui/main_chest_inventory/MainChestInventory.gd" id="1_taevh"]
[ext_resource type="PackedScene" uid="uid://bvngaac7bi8t0" path="res://resources/inventory/ui/inventory_ui.tscn" id="4_5ijbj"]
[ext_resource type="Texture2D" uid="uid://d2gm6qw1hu6p2" path="res://assets/inventory/frame.png" id="5_ltl6j"]
[ext_resource type="Theme" uid="uid://cxbdqv0cxcy1m" path="res://resources/themes/theme.tres" id="6_ivm7s"]
[ext_resource type="Script" path="res://resources/inventory/ui/main_chest_inventory/MainChestInventoryHandler.gd" id="7_qacht"]

[node name="MainChestInventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 595.0
offset_top = 176.0
offset_right = 595.0
offset_bottom = 176.0
script = ExtResource("1_taevh")

[node name="InventoryUI" parent="." instance=ExtResource("4_5ijbj")]
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="BackGround" parent="InventoryUI" index="0"]
offset_right = 300.0
offset_bottom = 300.0
texture = ExtResource("5_ltl6j")
patch_margin_left = 0
patch_margin_top = 0
patch_margin_right = 0
patch_margin_bottom = 0

[node name="GridItemsContainer" parent="InventoryUI" index="1"]
offset_left = 19.0
offset_top = 50.0
offset_right = 279.0
offset_bottom = 90.0

[node name="CurrentItemLabel" type="Label" parent="InventoryUI"]
layout_mode = 0
offset_left = 73.0
offset_top = 15.0
offset_right = 229.0
offset_bottom = 39.0
theme = ExtResource("6_ivm7s")
text = "
"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="MainChestInventoryHandler" type="Node" parent="."]
script = ExtResource("7_qacht")

[editable path="InventoryUI"]
